@@ -1,0 +1,107 @@
+Bulk change copyright
+=====================
+
+The bulk change of copyright changes the copyright of all objects in a
+collection which are adaptable to IImageMetata.
+
+There is one image in 2006[#browser]_:
+
+>>> browser.open('http://localhost/++skin++cms/repository/2006')
+
+Add an image group because one object is boring:
+
+>>> menu = browser.getControl(name='add_menu')
+>>> menu.displayValue = ['Image group']
+>>> browser.open(menu.value[0])
+>>> browser.getControl("File name").value = 'agroup'
+>>> browser.getControl('Image title').value = 'Group'
+
+Set a copyright which will be overwritten by the bulk change:
+
+>>> browser.getControl(name='form.copyrights.0..combination_00').value = (
+...     'ZEIT ONLINE')
+>>> browser.getControl(name='form.copyrights.0..combination_01').value = (
+...     'http://www.zeit.de/')
+>>> browser.getControl(name='form.actions.add').click()
+
+
+The changer is a lightbox:
+
+>>> browser.open('http://localhost/++skin++cms/repository/2006')
+>>> browser.getLink('Bulk change image copyright')
+<Link text='[IMG] Bulk change image copyright'
+    url="javascript:zeit.cms.lightbox_form('http://localhost/++skin++cms/repository/2006/@@set-image-copyright')">
+
+Open the lightbox:
+
+>>> browser.open(
+...     'http://localhost/++skin++cms/repository/2006/@@set-image-copyright')
+>>> print browser.contents
+<div id="copyright-box"...>
+  <h1>
+    Set copyright for all images in
+    http://xml.zeit.de/2006
+  </h1>
+    ...
+
+Fill in two copyrights:
+
+>>> browser.getControl(name='form.copyrights.0..combination_00').value = (
+...     'gocept')
+>>> browser.getControl(name='form.copyrights.0..combination_01').value = (
+...     'http://www.gocept.com/')
+>>> browser.getControl('Add Copyrights').click()
+>>> browser.getControl(name='form.copyrights.1..combination_00').value = (
+...     'Hans')
+>>> browser.getControl(name='form.copyrights.1..combination_01').value = (
+...     'http://www.wurst.com/')
+>>> browser.getControl('Set copyrights').click()
+>>> print browser.contents
+<div...
+   <span class="nextUrl">http://localhost/++skin++cms/repository/2006/@@view.html</span>
+   ...
+
+When we open the 2006 page (where we would have been redirected) we'll get a
+message about the copyright change:
+
+>>> browser.open('http://localhost/++skin++cms/repository/2006/@@view.html')
+>>> print browser.contents
+<?xml ...
+    ...>Copyright changed for: DSC00109_2.JPG, agroup<...
+
+Let's see if that's correct:
+
+>>> browser.open(
+...     'http://localhost/++skin++cms/repository/2006/'
+...     'DSC00109_2.JPG/@@view.html')
+>>> print browser.contents
+<?xml...
+  <ol class="image-copyrights">
+    <li>
+      gocept
+      (<a href="http://www.gocept.com/">http://www.gocept.com/</a>)
+    </li>
+    <li>
+      Hans
+      (<a href="http://www.wurst.com/">http://www.wurst.com/</a>)
+    </li>
+  </ol>
+  ...
+
+>>> browser.open(
+...     'http://localhost/++skin++cms/repository/2006/agroup')
+>>> browser.getLink('View metadata').click()
+>>> print browser.contents
+<?xml ...
+...gocept...
+...<a href="http://www.gocept.com/">http://www.gocept.com/</a>
+...
+...Hans
+...<a href="http://www.wurst.com/">http://www.wurst.com/</a>...
+
+
+.. [#browser]
+
+    >>> import zope.testbrowser.testing
+    >>> browser = zope.testbrowser.testing.Browser()
+    >>> browser.addHeader('Authorization', 'Basic user:userpw')
